Bottom-up scroll and text is done. Edited app colours.

--- a/Assignment3/public/index.html
+++ b/Assignment3/public/index.html
@@ -15,7 +15,7 @@
      
       <div class="inputform">
         <form action="">
-            <input id="m" autocomplete="off" /><button>Send</button>
+            <input id="m" autocomplete="off" /><button><b><font color="white">Send</font></b></button>
         </form>
         </div>     
       
